Versão 0.0.2 do serviço
Funcionalidade #1105: [Webservice] [Pre-processment] Conversores dos
dados recebidos e devolvidos

--- a/fh-quality/fh-quality-service/pom.xml
+++ b/fh-quality/fh-quality-service/pom.xml
@@ -87,6 +87,11 @@
 		</dependency>
 		<dependency>
 			<groupId>fhquality</groupId>
+			<artifactId>fh-quality-service-domain</artifactId>
+			<version>0.0.1</version>
+		</dependency>		
+		<dependency>
+			<groupId>fhquality</groupId>
 			<artifactId>fh-quality-infrastructure</artifactId>
 			<version>0.0.1</version>
 		</dependency>
