--- a/fh-quality/fh-quality-common/.classpath
+++ b/fh-quality/fh-quality-common/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="target/classes" path="src/main/java">
+	<classpathentry excluding="pt/up/med/mim/fh/quality/common/converter/DataSetBeanFactory.java" kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
