--- a/fh-quality/fh-quality-service-domain/pom.xml
+++ b/fh-quality/fh-quality-service-domain/pom.xml
@@ -29,6 +29,7 @@
 			<groupId>fhquality</groupId>
 			<artifactId>fh-quality-domain</artifactId>
 			<version>0.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
