--- a/fh-quality/pom.xml
+++ b/fh-quality/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>fhquality</groupId>
@@ -15,13 +16,14 @@
 	</properties>
 
 	<modules>
-		<module>fh-quality-infrastructure</module>
 		<module>fh-quality-domain</module>
 		<module>fh-quality-app</module>
 		<module>fh-quality-common</module>
 		<module>fh-quality-service</module>
-    <module>fh-quality-service-domain</module>
-  </modules>
+		<module>fh-quality-service-domain</module>
+		<module>fh-quality-base</module>
+		<module>fh-quality-infrastructure</module>
+	</modules>
 
 	<repositories>
 		<repository>
